exercises/module8/part2/httpserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-server
  name: httpsvc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: http-server
  type: ClusterIP
